# conversational-assistant

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  text_to_speech.py
.github/workflows/: run-checks.yml  run-frontend-test.yml
backend/: .env.sample  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app/LLM/: llama3.py
backend/app/models/: chat_response.py  profile.py  text_message.py  tts_message.py  voice_message.py
backend/app/routes/: chatRouter.py  profileRouter.py  textChatRouter.py  ttsRouter.py  voiceChatRouter.py  voiceRouter.py
backend/app/utils/app_builder/: app_builder.py
backend/server/: main.py  server.py
backend/speech-to-text/: main.py  push_stream_writer.py  speech_config.py  speech_recognition.py  speech_to_text.py  stt_test.py  test_stt.py
backend/stt/: speech_config.py  speech_to_text.py  test_stt.py
backend/test/: index.html  index_2.html  rag-response.json  text-response.txt
backend/text-to-speech/: text_to_speech.py
backend/tts/: tts.py
frontend/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
frontend/src/: styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/microphone-button/: microphone-button.component.css  microphone-button.component.ts  (+2 more)
frontend/src/app/types/: chat-mode.type.ts  message.type.ts  mic-state.type.ts  profile.type.ts  voice-activity.type.ts
frontend/src/app/utils/: audio-analyser.ts  audio-recorder.ts
(+72 files in other folders)
