[tool.poetry]
name = "conversational-assistant"
version = "0.1.0"
description = ""
authors = ["Wilsven Leong <wilsven_leong96@hotmail.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "24.4.2"
isort = "5.13.2"
nbqa = "1.8.5"
ruff = "~0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
